fix: pagination alignment adjusted and input focus maintained during search

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -318,8 +318,9 @@ nav ul.navbar-nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
   justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
 }
 
 .pagination {
@@ -332,22 +333,14 @@ nav ul.navbar-nav {
 
 .prev-next-buttons {
   display: flex;
-  gap: 5px;
-  width: 150px;
+  gap: 10px;
+  justify-content: center;
 }
 
 .prev-next-buttons button {
-  width: 100px;
+  width: auto; // veya belirli genişlikte tutabilirsin ama hizalamayı bozmamalı
   min-width: 100px;
-  font-size: 16px;
-  cursor: pointer;
-  border: 1px solid #ccc;
-  justify-content: center;
-  align-items: center;
-  border-radius: 6px;
   text-align: center;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
   input,
